# spotify-tracks-archiver

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/spotify_tracks_archiver/: __init__.py  __main__.py  api.py  constants.py  main.py
tests/: api_test.py  cli_test.py  conftest.py
